name:                attic-schedule
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/passy/attic-schedule#readme
license:             BSD3
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          phartig@rdrei.net
copyright:           2015 Pascal Hartig
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable attic-schedule
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  Ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , text
                     , system-filepath
                     , cond
                     , time
                     , foldl
                     , attoparsec
